# qt-template

./: .gitignore  CMakeLists.txt  Exceptions_8cpp.html  Exceptions_8cpp.js  Exceptions_8cpp_ac7bf13b2fdf00a009004572637abc288_icgraph.map  Exceptions_8cpp_ac7bf13b2fdf00a009004572637abc288_icgraph.md5  Exceptions_8cpp_source.html  Exceptions_8h.html  Exceptions_8h.js  Exceptions_8h_ac7bf13b2fdf00a009004572637abc288_icgraph.map  Exceptions_8h_ac7bf13b2fdf00a009004572637abc288_icgraph.md5  Exceptions_8h_source.html  FantasqueSansMono-Regular.css  README.md  Test_8md.html  annotated.html  annotated_dup.js  classAppException-members.html  classAppException.html  classAppException.js  classAppException__coll__graph.map  classAppException__coll__graph.md5  classAppException__inherit__graph.map  classAppException__inherit__graph.md5  classAppException_a7a87017b41c9cf74519fd867a8a44cf1_cgraph.map  classAppException_a7a87017b41c9cf74519fd867a8a44cf1_cgraph.md5  classAppException_ae0ab77151fe19644658d0420450c5bc8_icgraph.map  classAppException_ae0ab77151fe19644658d0420450c5bc8_icgraph.md5  classDifferentWindow-members.html  classDifferentWindow.html  classDifferentWindow.js  classDifferentWindow__coll__graph.md5  classDifferentWindow__inherit__graph.map  classDifferentWindow__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow_1_1Point-members.html  classMainWindow_1_1Point.html  classMainWindow_1_1Point.js  (+55 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autotag.yml  doxygen.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: Modules.cmake  Resources.cmake  Sources.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
conan/: conanfile.txt
doxygen/: Doxyfile  Doxyfile_dev  header.html  header_dev.html  hideProtected.css  hideProtected.js  layout.xml  styleOverride.css
font/: NotoSans-Regular.css
icon/: icon.icns  icon.rc
icon/UnixScripts/: README.txt  createIcns.sh  createIco.sh  createIco_ImageMagick7.sh  rescale.sh  rescale_ImageMagick7.sh
icon/WinScripts/: createIco.bat  fixUnixScripts.ps1  rescale.bat
pages/: Test.md  index.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+25 more)
src/: Exceptions.cpp  Exceptions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Exceptions/: Exceptions.cpp  Exceptions.h
test/: CMakeLists.txt  testTest.cpp
